force-app/main/default/objects/QTB_Quote_Field_Validations__c/QTB_Quote_Field_Validations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>#537-Enhancement,dispaying the date fields names.</description>
    <label>QTB Quote Field Validations</label>
</CustomObject>