force-app/main/default/objects/QTB_Quote_Field_Validations__c/fields/QTB_Delta_Fields__c.field-meta.xml
<CustomField>
    <fullName>QTB_Delta_Fields__c</fullName>
    <label>Delta Fields</label>
    <type>TextArea</type>
</CustomField>