force-app/main/default/objects/QTB_Quote_Field_Validations__c/fields/QTB_Field_List__c.field-meta.xml
<CustomField>
    <fullName>QTB_Field_List__c</fullName>
    <label>Field List</label>
    <type>TextArea</type>
</CustomField>