force-app/main/default/objects/QTB_Quote_Field_Validations__c/fields/QTB_Restrict_on_Accepted_Quote__c.field-meta.xml
<CustomField>
    <fullName>QTB_Restrict_on_Accepted_Quote__c</fullName>
    <label>Restrict on Accepted Quote</label>
    <type>TextArea</type>
</CustomField>